--- a/aggregate-dist/pom.xml
+++ b/aggregate-dist/pom.xml
@@ -7,6 +7,7 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>aggregate-dist</artifactId>
+	<packaging>pom</packaging>
 	<name>Maven Recipe: Aggregate jar - distribution</name>
 	<build>
 		<plugins>
